# DiscreteEventSimulation

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  coffee.c  coffeesimulator.c  coffeesimulator.h  coffeesimulator.sln  handler_data.c  handler_functions.c
Debug/: coffeesimulator.exe.metagen
apps/coffeesim/: CMakeLists.txt  main.c
apps/config_runner/: CMakeLists.txt  main.c
apps/desim/: CMakeLists.txt  main.c
apps/mdf_export/: CMakeLists.txt  main.c
apps/release_pipeline/: CMakeLists.txt  main.c
apps/tui_editor/: CMakeLists.txt  main.c
apps/workbench/: README.md  app.css  app.js  index.html
coffeesimulator/: AssemblyInfo.cpp  Hist.csv  ReadMe.txt  Stat.csv  coffeesimulator.cpp  coffeesimulator.vcxproj  coffeesimulator.vcxproj.filters  log.txt  stdafx.cpp  stdafx.h
coffeesimulator/Debug/: .NETFramework,Version=v4.5.AssemblyAttributes.asm  coffeesimulator.vcxprojResolveAssemblyReference.cache
coffeesimulator/Debug/coffeesimulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  coffeesimulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
configs/: airport_security.json  coffee_shop.json  des_schema.json  release_pipeline.json  theme_park.json  whatif_release.json
docs/: architecture.md
framework/: CMakeLists.txt
framework/include/des/: des.h  des_config.h  des_engine.h  des_entity.h  des_event_queue.h  des_json_load.h  des_mdf.h  des_resource.h  des_rng.h  des_stats.h  des_types.h
framework/src/: config.c  des_mdf.c  engine.c  entity.c  event_queue.c  json_load.c  json_parser.inc  json_save.c  resource.c  rng.c  stats.c  validation.c
tests/: CMakeLists.txt  test.h  test_airport.c  test_config.c  test_engine.c  test_engine_edges.c  test_event_queue.c  test_validation.c  test_whatif.c
