cmake_minimum_required(VERSION 3.14)
project(DESFramework C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

option(DES_BUILD_APPS "Build command-line applications" ON)
option(DES_BUILD_EXAMPLES "Build legacy example runners" OFF)
option(DES_ENABLE_WARNINGS "Enable recommended compiler warnings" ON)
option(BUILD_TESTS "Build tests" ON)
option(BUILD_LEGACY_TUI "Build the deprecated Windows-only TUI editor" OFF)

if(MSVC)
  add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
endif()

if(DES_ENABLE_WARNINGS)
  if(MSVC)
    add_compile_options(/W4)
  else()
    add_compile_options(-Wall -Wextra -Wpedantic)
  endif()
endif()

add_subdirectory(framework)
if(DES_BUILD_APPS)
  add_subdirectory(apps/mdf_export)
  add_subdirectory(apps/desim)
  if(DES_BUILD_EXAMPLES)
    add_subdirectory(apps/coffeesim)
    add_subdirectory(apps/release_pipeline)
    add_subdirectory(apps/config_runner)
  endif()
  if(BUILD_LEGACY_TUI)
    if(NOT WIN32)
      message(FATAL_ERROR "The legacy TUI is only supported on Windows")
    endif()
    add_subdirectory(apps/tui_editor)
  endif()
endif()

if(BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
